--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -217,3 +217,13 @@ h1 a {
   border: none;
   position: relative;
 }
+
+.loader {
+  height: 20%;
+  width: 100%;
+  display: flex;
+  position: fixed;
+  align-items: center;
+  justify-content: center;
+  font-size: 28pt;
+}
